# howoldami

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  artifacts.json  changelog.rss  devenv.nix  flake.nix  howoldami-installer.sh.txt  index.html  oranda.json
.github/workflows/: release.yml  web.yml
artifacts/: index.html
changelog/: index.html
changelog/v0.1.0/: index.html
changelog/v0.1.1/: index.html
src/: main.rs
