[package]
name = "howoldami"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = { version = "0.4.31" }
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
directories = "5.0.1"
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"

[dev-dependencies]
pretty_assertions = "1.4.0"
